Let's try our best

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 <div class="w3-row w3-margin">
 
 <div class="w3-third">
-  <img src="img/boracay.jpg" style="width:100%;min-height:200px">
+  <img src="img/Albay.jpg" style="width:100%;min-height:200px">
 </div>
 <div class="w3-twothird w3-container">
-  <h2>Boracay Beach</h2>
+  <h2>Mayon Volcano</h2>
   <p>
-    Boracay Island in the Philippines has been called the Ibiza of Asia, a honeymooner’s dream and a backpacker’s secret, but as the number of visitors increased, so too did the environmental issues. In an attempt to save the island’s ecosystem from ruin, in 2018 the island was closed for six months. Culture Trip speaks to locals about the effect the shutdown had.
+    A popular tourist spot, it is renowned for its "perfect cone" because of its symmetric conical shape, and is regarded as very sacred in Philippine mythology. The volcano with its surrounding landscape was declared a national park on July 20, 1938, the first in the nation.
   </p>
 </div>
 
@@ -27,12 +27,13 @@
 <div class="w3-row w3-margin">
 
 <div class="w3-third">
-  <img src="img/elnido.jpg" style="width:100%;min-height:200px">
+  <img src="img/Cuyo.jpg" style="width:100%;min-height:200px">
 </div>
 <div class="w3-twothird w3-container">
-  <h2>El Nido Palawan</h2>
+  <h2>Cuyo Palawan</h2>
   <p>
-    You’ve probably seen photographs of the stunning limestone formations around El Nido rising majestically above the turquoise water. It is one of the most popular destinations in the Philippines and for good reason, the nearby islands and beaches are absolutely stunning. But the actual town of El Nido leaves something to be desired. The infrastructure has not yet caught up with the massive influx of tourists. Which means a lot of construction, contaminated water, questionable toilets, and high prices.
+    Cuyo is the oldest town in Palawan which has a culture of its own and was preserved for more than 350 years. During the Spanish colonization of the Philippines, Cuyo became the second capital of Palawan after Puerto Princesa from 1873 to 1903.
+    A Cuyono holds a personal view of the universe. The universe is directly controlled by personal beings other than and different from himself. A major goal for all family members is an integrated and prosperous Cuyono family. Every member strives for economic efficiency for himself and his family.
   </p>
 </div>
 
@@ -40,12 +41,12 @@
 <div class="w3-row w3-margin">
 
 <div class="w3-third">
-  <img src="img/chocolatehills.jpg" style="width:100%;min-height:200px">
+  <img src="img/Balabac.jpg" style="width:100%;min-height:200px">
 </div>
 <div class="w3-twothird w3-container">
-  <h2>Chocolate Hills</h2>
+  <h2>Balabac Palawan</h2>
   <p>
-    According to legends, the Chocolate Hills existed because of a weeping giant who had been disappointed in love, and the hills grew where his tears fell. In another legend, two giants went to war and lobbed boulders at each other for days. The giants eventually resolved their differences, but the mounds remained where the rocks landed.
+    Balabac is known for it's wonderful lighthouse that was built during the Spanish era called The Cape Melville Lighthouse. The tower was made of granite and has a 90ft. (27.4) tall, located in Balabac island. It is one of the evidence of how rich Palawan is in historical sites that were built hundreds of years ago.
   </p>
 </div>
 
@@ -53,25 +54,12 @@
 <div class="w3-row w3-margin">
 
 <div class="w3-third">
-  <img src="img/puerto-princesa-underground-river.jpg" style="width:100%;min-height:200px">
+  <img src="img/Batanes.jpg" style="width:100%;min-height:200px">
 </div>
 <div class="w3-twothird w3-container">
-  <h2>Undergroud River</h2>
+  <h2>Batanes Philippines</h2>
   <p>
-    It’s not surprising at all when Palawan has been recognized as the best island in the world by international travel magazines. With its pristine beaches and breathtaking lagoons, you will never be disappointed at what’s waiting for you. One charming treasure of Palawan that truly stands out is the Puerto Princesa Subterranean River National Park.
-    </p>
-</div>
-
-</div>
-<div class="w3-row w3-margin">
-
-<div class="w3-third">
-  <img src="img/banauerice.jpg" style="width:100%;min-height:200px">
-</div>
-<div class="w3-twothird w3-container">
-  <h2>Banaue Rice Terraces</h2>
-  <p>
-    Ang Hagdan-hagdang Palayan ng Banawe (Ingles: Banaue Rice Terraces) ay mga 2000-taong gulang na mga hagdanang-taniman na nililok sa mga bulubundukin ng Ifugao sa Pilipinas ng mga ninuno ng mga katutubong mamamayanang Batad. Karaniwang tinatawag ito ng mga Pilipino bilang "Ikawalong Kahangahangang Pook sa Mundo". Tinatawag itong payew sa katutubong pananalita sa Ifugao.
+    It is known for its scenic waters and terrain and clean environment. Batanes is also recognized for the unique culture of the islands' first settlers, the Ivatans. Batanes is open for swimming, snorkeling, diving, lighthouse visits, biking, and visits to century-old Ivatan houses.   
   </p>
 </div>
 
@@ -79,12 +67,25 @@
 <div class="w3-row w3-margin">
 
 <div class="w3-third">
-  <img src="img/taal.jpg" style="width:100%;min-height:200px">
+  <img src="img/Benguet.jpg" style="width:100%;min-height:200px">
 </div>
 <div class="w3-twothird w3-container">
-  <h2>Taal Volcano</h2>
+  <h2>Benguet Philippines</h2>
   <p>
-    Mayon Volcano-north of Legazpi city, Albay, Bicol Mayon Volcano, also known as Mount Mayon , is an active mountain in the province of Albay , on the island of Luzon in the Philippines.
+    Benguet is most known for being the home of Baguio City, a top tourist destination that is also called the Summer Capital of the Philippines. You can hang out in Baguio tourist spots like Camp John Hay, Burnham Park, and The Mansion among many others.
+  </p>
+</div>
+
+</div>
+<div class="w3-row w3-margin">
+
+<div class="w3-third">
+  <img src="img/Tagaytay.jpg" style="width:100%;min-height:200px">
+</div>
+<div class="w3-twothird w3-container">
+  <h2>Tagaytay Philippines</h2>
+  <p>
+    Tagaytay is one of the most frequented places in the south because of its outstanding scenery. It overlooks Taal Lake and Taal Volcano and cold climate, given its high altitude. This makes both the volcano and lake viewable from several vantage points.
   </p>
 </div>
 
